Do not use new Long/Byte/Short/Character etc.
They are all deprecated